--- a/style.css
+++ b/style.css
@@ -59,7 +59,19 @@ main{
     padding: 20px;
 }
 
-.fake{
+main article{
+    margin-bottom: 20px;
+}
+
+main h5{
+    margin-bottom: 4px;
+}
+
+main p{
+    text-align: justify;
+}
+
+.container{
     width: 100%;
     background-color: #aaa;
     text-align:center;
@@ -72,6 +84,16 @@ footer{
     text-align: center;
     color: white;
     padding: 30px;
+}
+
+
+footer a{
+    color: rgb(238, 211, 211);
+    text-decoration: none;
+}
+
+footer a:hover{
+    text-decoration: underline;
 }
 
 
