--- a/style.css
+++ b/style.css
@@ -47,6 +47,10 @@ nav a:hover{
     flex-wrap: wrap;
 }
 
+.row p{
+    text-align: justify;
+}
+
 aside{
     flex: 30%;
     padding: 30px;
@@ -98,14 +102,48 @@ footer a:hover{
 
 
 
-@media( max-width: 700px){
-    nav{
-        flex-direction: column;
+@media (max-width: 700px) {
+
+    nav {
+      flex-direction: column;
     }
-    .row{
-        flex-direction: column;
+  
+    .row {
+      flex-direction: column;
     }
-}
+  
+    aside, main {
+      flex: 100%;
+      padding: 20px;
+    }
+  
+    .container img {
+      width: 100%;
+      height: auto;
+      max-width: 100%;
+    }
+  
+    header {
+      padding: 30px;
+    }
+  
+    header h1 {
+      font-size: 1.8rem;
+    }
+  
+    header p {
+      font-size: 1rem;
+    }
+  
+    main h2, aside h2, aside h3 {
+      font-size: 1.5rem;
+    }
+  
+    main p, aside p {
+      font-size: 1rem;
+    }
+  
+  }
 
 
 
